# water_monitoring_g6

./: .gitmodules  README.md  gitignore
base_station/: README.md  sample.yaml  west.yml
base_station/app/: prj.conf
base_station/app/boards/: rpi_pico.overlay
base_station/app/src/: main.c
base_station/drivers/sensor/: Kconfig
base_station/drivers/sensor/sensor/: sensor.c  water.c
base_station/drivers/sensor/water/: Kconfig  water.c
base_station/dts/bindings/: vendor-prefixes.txt
base_station/dts/bindings/sensor/: raspberry,rp2040.yaml
base_station/include/app/drivers/sensor/: sensor.h
base_station/src/base_station.c/: prj.conf
base_station/src/base_station.c/src/: main.c
base_station_old/: app.overlay  prj.conf
doc/: Doxyfile
doc/drivers/: water.rst
documentation/: BoM- Water Quality measure Group 6(1).xlsx
sensor_node/: CMakeLists.txt  README.md  app.overlay  prj.conf  sample.yaml  zephyr-windows.code-workspace
sensor_node/boards/: rpi_pico.dtsi  rpi_pico.overlay
sensor_node/driver/: analogsensors.c  analogsensors.h  bme680.c  bme680.h  ds18b20.c  ds18b20.h  sensordata.h
sensor_node/drivers/: phsensor.c  phsensor.h  tubudity.c  tubuditysensor.c  turbidysensor.h
sensor_node/src/: main.c
